<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exchange.view.MainActivity">

    <TextView
        android:id="@+id/tv_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/exchange_base"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/tv_base"
        app:layout_constraintStart_toStartOf="@+id/tv_base"
        app:layout_constraintTop_toBottomOf="@id/tv_base" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/tv_base"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RadioButton
            android:id="@+id/rb_eur"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eur"
            android:textColor="@color/gray"
            android:textSize="@dimen/_22ssp" />

        <RadioButton
            android:id="@+id/rb_usd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/usd"
            android:textColor="@color/gray"
            android:textSize="@dimen/_22ssp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exchange_type"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/rg" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/tv_types"
        app:layout_constraintStart_toStartOf="@+id/tv_types"
        app:layout_constraintTop_toBottomOf="@id/tv_types" />

    <LinearLayout
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <include
            android:id="@+id/item_cad"
            layout="@layout/item_type" />

        <include
            android:id="@+id/item_gbp"
            layout="@layout/item_type" />

        <include
            android:id="@+id/item_mxn"
            layout="@layout/item_type" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_turning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/turning"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <ImageView
        android:id="@+id/img_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:contentDescription="@string/turn_arrow"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_turning" />


    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayTransparent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>